trunk/tests/jastadd/negative/type_errors/L3/7_NonProcedureCall.ob
MODULE TestModule;
	CONST c = 1;
	PROCEDURE f;
	END f;
BEGIN
    f;
    c
END TestModule.
